--- a/admin/index.html
+++ b/admin/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Page</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -20,38 +26,39 @@
             </div>
         </div>
         <!-- <h2 style="margin-left: 400px; display: flex;">Admin Page</h2> -->
-        <button type="button" name="logout" style="margin-left: auto; margin-top: 25px; width: 100px; height: 50px; ;">Logout</button>
+        <button type="button" class="btn btn-primary btn-lg" style="margin-left: auto; margin-top: 25px; width: 100px; height: 50px;">Logout</button>
+    </div>
+    <br /><br /><br />
+
+
+    <div class="shell1">
+        <div class="mini-cont">Number of registered Employees
+            <div class="numbers"> 500</div>
         </div>
-        <br /><br /><br /><br /><br />
-
-
-        <div class="shell1">
-            <div class="mini-cont">Number of registered Employees
-                <div class="numbers"> 500</div>   
-            </div>
-            <div class="mini-cont">Number of registered Employers
-                <div class="numbers"> 500</div>   
-            </div>
+        <div class="mini-cont">Number of registered Employers
+            <div class="numbers"> 500</div>
         </div>
-        <br/>
+    </div>
+    <br /><br /><br />
 
-         <div class="shell2">
-            <div class="mini-cont">Number of Active jobs
-                <div class="numbers"> 500</div>            </div>
-            <div class="mini-cont">number of hired Employees
-                <div class="numbers"> 500</div>   
-            </div>
-
+    <div class="shell2">
+        <div class="mini-cont">Number of Active jobs
+            <div class="numbers"> 500</div>
+        </div>
+        <div class="mini-cont">number of hired Employees
+            <div class="numbers"> 500</div>
         </div>
 
-        <br/>
-        <!-- <div class="shell3">
+    </div>
+
+    <br />
+    <!-- <div class="shell3">
             <div class="mini-cont"></div>
             <div class="mini-cont"></div>
             
 
         </div> -->
- <footer style="height: 40px; text-align: center; background-color: aquamarine;">c 2024</footer>
+    <footer style="height: 40px; text-align: center; background-color: aquamarine;">c 2024</footer>
 
 </body>
 
